create function working

--- a/flashcard.html
+++ b/flashcard.html
@@ -1,5 +1,17 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <title>flashcards</title>
+    </head>
     <body>
-        <h1>Testing :D</h1>
+        <h2>
+            Create a new flashcard
+        </h2>
+        <input id="front-card" autofocus type="text" placeholder="Front">
+        <input id="back-card" type="text" placeholder="Back">
+        <input id="create" type="submit" value="Create">
+        <button id="view">View flashcards</button>
     </body>
+    <script src="popup.js"></script>
 </html>
