display and submit flashcards working

--- a/cards.html
+++ b/cards.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 
 <html>
+    <title>Flashcards</title>
+    <script src="display.js" defer></script>
     <body>
         <h3>Flashcards</h3>
-        
+        <table>
+            <thead>
+                <tr>
+                    <th>Front</th>
+                    <th>Back</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </body>
 </html>
