--- a/flashcard.html
+++ b/flashcard.html
@@ -8,9 +8,11 @@
         <h2>
             Create a new flashcard
         </h2>
-        <input id="front-card" autofocus type="text" placeholder="Front">
-        <input id="back-card" type="text" placeholder="Back">
-        <input id="create" type="submit" value="Create">
+        <form id="new-card-form">
+            <input id="front-card" autofocus type="text" placeholder="Front">
+            <input id="back-card" type="text" placeholder="Back">
+            <input id="create" type="submit" value="Create">
+        </form>
         <button id="view">View flashcards</button>
     </body>
     <script src="popup.js"></script>
