update names and popup window created

--- a/cards.html
+++ b/cards.html
@@ -2,7 +2,7 @@
 
 <html>
     <title>Flashcards</title>
-    <script src="display.js" defer></script>
+    <script src="cards.js" defer></script>
     <body>
         <h3>Flashcards</h3>
         <table>
