--- a/flashcard.html
+++ b/flashcard.html
@@ -15,5 +15,5 @@
         </form>
         <button id="view">View flashcards</button>
     </body>
-    <script src="popup.js"></script>
+    <script src="flashcard.js"></script>
 </html>
