--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     </title>
     <body>
         <h1></h1>
+        <button id="close">Close</button>
         <script src="popup.js"></script>
     </body>
 </html>
