--- a/flashcard.html
+++ b/flashcard.html
@@ -2,18 +2,28 @@
 
 <html lang="en">
     <head>
-        <title>flashcards</title>
+        <title>Flashcards</title>
+        <link href="style/style.css" rel="stylesheet">
     </head>
     <body>
-        <h2>
-            Create a new flashcard
-        </h2>
-        <form id="new-card-form">
-            <input id="front-card" autofocus type="text" placeholder="Front">
-            <input id="back-card" type="text" placeholder="Back">
-            <input id="create" type="submit" value="Create">
-        </form>
-        <button id="view">View flashcards</button>
+        <div class="page">
+            <h3>
+                Create a new flashcard
+            </h3>
+            <form id="new-card-form">
+                <input class="front" id="front-card" autofocus type="text" placeholder="Front">
+                <input class="back" id="back-card" type="text" placeholder="Back">
+                <input id="create" type="submit" value="Create">
+            </form>
+        </div>
+        <button class="view" id="view">View flashcards</button>
+        <select id="timer">
+            <option id="off">Off</option>
+            <option id="1">1 minute</option>
+            <option id="5">5 minutes</option>
+            <option id="10">10 minutes</option>
+            <option id="20">20 minutes</option>
+        </select>
     </body>
     <script src="flashcard.js"></script>
 </html>
