--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-    <title>
-        Card
-    </title>
+    <head>
+        <title>Card</title>
+        <link href="style/style.css" rel="stylesheet">
+    </head>
     <body>
-        <h1></h1>
-        <button id="close">Close</button>
-        <script src="popup.js"></script>
+        <div class="page">
+            <h1></h1>
+            <h2></h2>
+            <script src="popup.js"></script>
+        </div>
     </body>
 </html>
